manifests/ArgoCD201-RolloutsDemoHeaderIstio/header.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-host-split-canary
  labels:
    app: istio-host-split
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: istio-host-split

---
apiVersion: v1
kind: Service
metadata:
  name: istio-host-split-stable
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: istio-host-split

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-host-split-vsvc
spec:
  hosts:
    - "*"
  gateways:
    - istio-host-split-gateway
  http:
    - name: primary
      route:
        - destination:
            host: istio-host-split-stable
          weight: 100
        - destination:
            host: istio-host-split-canary
          weight: 0

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-host-split
spec:
  replicas: 4
  strategy:
    canary:
      canaryService: istio-host-split-canary
      stableService: istio-host-split-stable
      trafficRouting:
        managedRoutes:
          - name: canary-header
        istio:
          virtualService:
            name: istio-host-split-vsvc
            routes:
              - primary
      steps:
        - setCanaryScale:
            weight: 50
        - setHeaderRoute: # enable header based traffic routing where
            name: canary-header
            match:
              - headerName: Canary-Users
                headerValue:
                  exact: "true"
        - pause: {}
  selector:
    matchLabels:
      app: istio-host-split
  template:
    metadata:
      labels:
        app: istio-host-split
    spec:
      containers:
        - name: istio-host-split
          image: argoproj/rollouts-demo:green
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 16Mi
              cpu: 5m

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-host-split-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
